--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         </div>
         
         <div class="copyright container">
-            <p>&copy; 2023 Bailiff Advice. All rights reserved. This is a demonstration website for educational purposes.</p>
+            <p>&copy; 2025 Bailiff Advice. All rights reserved. </p>
         </div>
     </footer>
 
