--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <div class="form-col">
                         <div class="form-group">
                             <label for="bailiff">Bailiff Company (if known)</label>
-                            <input type="text" id="bailiff" name="bailiff" placeholder="e.g. Newlyn, Marston, Dukes">
+                            <input type="text" id="bailiff" name="bailiff" placeholder="">
                         </div>
                     </div>
                 </div>
