--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         <!-- Home Page Content -->
         <div class="hero">
             <h1>Expert Bailiff Advice & Support</h1>
-            <p>Get professional guidance on dealing with bailiffs, enforcement agents, and debt collection. We provide clear advice to protect your rights and find practical solutions.</p>
+            <p>Get professional guidance on dealing with bailiffs, enforcement agents, and collection. We provide clear advice to protect your rights and find practical solutions.</p>
             <a href="#" class="btn btn-accent" id="getHelpBtn">Get Help Now</a>
         </div>
         
