--- a/index.html
+++ b/index.html
@@ -546,6 +546,15 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17944848129"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17944848129');
+</script>
 </head>
 <body>
     <!-- Header & Navigation -->
