--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free expert advice on dealing with bailiffs. Help with council tax debt, bailiff visits, and enforcement agents. Get help today.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-/* Modern Reset and Base Styles */
+<style>/* Modern Reset and Base Styles */
 :root {
     --primary-color: #2c3e50;
     --secondary-color: #e67e22;
@@ -462,6 +462,7 @@ footer {
         padding: 1.5rem;
     }
 }
+    </style>
 </head>
 <body>
     <header>
