--- a/test.html
+++ b/test.html
@@ -799,7 +799,7 @@ footer {
                 
                 <form id="multiStepForm" method="POST">
                     <!-- Web3Forms Access Key - Replace with your actual key -->
-                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                    <input type="hidden" name="access_key" value="c99e67be-7de0-456f-8d08-7f6dd2da5d71">
                     
                     <!-- Email subject -->
                     <input type="hidden" name="subject" value="New Free Advice Request from Website">
