--- a/index.html
+++ b/index.html
@@ -766,13 +766,13 @@ footer {
                 <i class="fas fa-shield-alt"></i>
                 <h3>Stop Bailiff Action</h3>
                 <p>Learn how to stop bailiff visits and protect your belongings. Get expert advice on your rights and options.</p>
-                <a href="help-with-bailiffs.html" class="btn">Learn More</a>
+                <a href="#" class="btn get-advice-from-card">Learn More</a>
             </div>
             <div class="feature-card">
                 <i class="fas fa-home"></i>
                 <h3>Council Tax Help</h3>
                 <p>Struggling with council tax debt? Find out how we can help you arrange affordable payments and stop bailiff action.</p>
-                <a href="help-with-council-tax.html" class="btn">Learn More</a>
+                <a href="#" class="btn get-advice-from-card">Learn More</a>
             </div>
             <div class="feature-card">
                 <i class="fas fa-file-invoice"></i>
