--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,8 @@ footer {
             <div class="footer-section">
                 <h4>Contact Info</h4>
                 <ul>
-                    <li><i class="fas fa-phone"></i> 0800 123 4567</li>
+                    <li><i class="fas fa-phone"></i>  0800 123 4567
+</li>
                     <li><i class="fas fa-envelope"></i> help@stopthebailiff.co.uk</li>
                     <li><i class="fas fa-clock"></i> Mon-Fri: 9am - 8pm</li>
                 </ul>
